# slushpool-importer

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
slushpool/: controller.py  service.py
slushpool/templates/slushpool/: payouts.jinja  upload.jinja
slushpool/templates/slushpool/components/: slushpool_menu.jinja  slushpool_tab.jinja
src/kdmukai/specterext/slushpool/: __main__.py  config.py  controller.py  service.py
src/kdmukai/specterext/slushpool/templates/slushpool/: index.jinja  settings.jinja
tests/: conftest.py
