[metadata]
name = kdmukai_slushpool
version = 0.0.1
author = Keith Mukai
description = Import your mining rewards history into Specter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdmukai/slushpool-importer
project_urls =
    Bug Tracker = https://github.com/kdmukai/slushpool-importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: specter :: Extension

[options]
package_dir =
    src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src
